Add 'make test-js' and try to make tests pass

--- a/theme/test.html
+++ b/theme/test.html
@@ -3,6 +3,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Unit tests for Planet Mg javascript</title>
   <link rel="stylesheet" href="planet.css" type="text/css">
+  <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="js/fastclick-0.6.7.js"></script>
   <script type="text/javascript" src="js/planetmg.js"></script>
   <script type="text/javascript" src="js/jsUnitCore.js"></script>
   <script type="text/javascript" src="js/tests.js"></script>
